--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A simple POC implementation of best-practice UX for magic links.",
   "author": "Thomas Schoffelen <thomas@schof.co>",
   "scripts": {
-    "deploy": "cd frontend && yarn build && cd .. && serverless deploy"
+    "deploy": "cd frontend && yarn install && yarn build && cd .. && npx serverless deploy"
   },
   "license": "MIT",
   "devDependencies": {
