--- a/serverless.yml
+++ b/serverless.yml
@@ -101,7 +101,7 @@ provider:
   name: aws
   runtime: nodejs10.x
   region: eu-west-1
-  stage: dev
+  stage: ${self:custom.stage}
   environment:
     URL: {"Fn::Join": ["", ["https://", {"Ref": "ApiGatewayRestApi"}, ".execute-api.${self:provider.region}.amazonaws.com/${self:provider.stage}"]]}
     USER_POOL_ID: {"Ref": "UserPool"}
@@ -123,9 +123,11 @@ package:
     - node_modules/aws-sdk/**
 
 custom:
-  userPoolName: sls-magic-link-poc-user-pool
-  userPoolClientName: sls-magic-link-poc-pool-client
-  webBucketName: sls-magic-link-poc-web
+  stage: ${opt:stage, 'quynh'}
+  userPoolName: sls-magic-link-poc-user-pool-${self:custom.stage}
+  userPoolClientName: sls-magic-link-poc-pool-client-${self:custom.stage}
+  webBucketName: sls-magic-link-poc-web-${self:custom.stage}
+
   apiGatewayServiceProxies:
     - s3:
         path: /
